# pocketbattle

./: .gitignore  Cargo.toml  LICENSE  README.md  pocketbattle.sublime-project
src/: attack.rs  lib.rs  monster.rs  species.rs  stats.rs  types.rs
tests/: crystal.toml  tests.rs  types_test.rs
