[package]
name = "pocketbattle"
version = "0.1.0"
authors = ["Daniel Ramos <sentret@outlook.com>"]
edition = "2018"
repository = "https://github.com/danisson/pocketbattle"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
